# StockIt

./: .gitignore  BRIEFINGS.md  README.md  ROADMAP.md
.github/workflows/: ci.yml
apps/api/: .dockerignore  .env.example  Dockerfile  fly.toml  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 51c2974f9ef0_initial.py
apps/api/app/: auth.py  db.py  main.py  models.py  openapi.py  scheduler.py
apps/api/app/llm/: __init__.py  claude.py  config.py  gemini.py  openai.py  provider.py  router.py
apps/api/app/pipeline/: diff.py  orchestrator.py  risk.py  schema.py  synth.py
apps/api/app/pipeline/analysts/: __init__.py  fundamentals.py  macro.py  news.py  technicals.py
apps/api/app/pipeline/data/: __init__.py  cache.py  fundamentals.py  macro.py  news.py  prices.py
apps/api/app/routes/: __init__.py  deps.py  notes.py  plans.py  settings.py  watchlist.py
apps/api/tests/: conftest.py  test_analyst_fundamentals.py  test_analyst_macro.py  test_analyst_news.py  test_analyst_technicals.py  test_auth.py  test_diff.py  test_e2e_pipeline.py  test_fundamentals.py  test_llm_router.py  test_macro.py  test_news.py  test_orchestrator.py  test_prices.py  test_risk.py  test_routes_notes.py  test_routes_openapi.py  test_routes_plans.py  test_routes_watchlist.py  test_scheduler.py  test_schema_roundtrip.py  test_synth.py
apps/web/: .env.example  auth.ts  middleware.ts  package.json  playwright.config.ts  pnpm-lock.yaml
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/app/login/: page.tsx
apps/web/src/app/settings/: actions.ts  page.tsx  settings-form.tsx
apps/web/src/app/watchlist/: actions.ts  page.tsx  watchlist-view.tsx
apps/web/src/components/charts/: Sparkline.tsx
apps/web/src/components/dashboard/: MarketStrip.tsx  Tickertape.tsx  WatchlistPreview.tsx
apps/web/src/components/forms/: GenerationProgress.tsx  actions.ts  plan-input-form.tsx
apps/web/src/components/nav/: top-nav.tsx
apps/web/src/components/plan/: Catalysts.tsx  Citations.tsx  ConvictionBar.tsx  DecisionRail.tsx  EntryStop.tsx  Exits.tsx  ExportButtons.tsx  Notes.tsx  PlanHeader.tsx  index.ts  (+5 more)
apps/web/src/lib/: api-schema.ts  api-types.ts  api.ts  magic-link.ts  plan-to-markdown.ts
apps/web/src/types/: generated.ts
apps/web/tests/e2e/: fixtures.ts  login.spec.ts  plan-submit.spec.ts  watchlist.spec.ts
docs/: deploy.md  frontend-stack-decisions.md  post-deploy-smoke.md  v1-acceptance.md
(+5 files in other folders)
