[project]
name = "stockit-api"
version = "0.0.0"
description = "StockIt FastAPI backend"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.32",
  "pydantic>=2.9",
  "pydantic-settings>=2.6",
  "sqlalchemy>=2.0",
  "alembic>=1.13",
  "aiosqlite>=0.20",
  "asyncpg>=0.29",
  "greenlet>=3.0",
  "yfinance>=1.3.0",
  "pandas>=3.0.3",
  "httpx>=0.28.1",
  "edgartools>=4.0",
  "instructor>=1.6",
  "anthropic>=0.40",
  "openai>=1.55",
  "google-genai>=0.3",
  "pyjwt>=2.10",
  "apscheduler>=3.10",
]

[dependency-groups]
dev = [
  "ruff>=0.7",
  "mypy>=1.13",
  "pytest>=8.3",
  "pytest-asyncio>=0.24",
  "httpx>=0.27",
  "pandas-stubs>=3.0.0.260204",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = ["alembic"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "W", "N"]

[tool.mypy]
python_version = "3.12"
strict = true
files = ["app", "tests"]
exclude = ["alembic/"]
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["yfinance", "yfinance.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["edgar", "edgar.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["instructor", "instructor.*", "google.genai", "google.genai.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["apscheduler", "apscheduler.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
